--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -76,4 +76,22 @@
         android:layout_gravity="center"
         android:text="Przepisy" />
 
+    <Button
+        android:id="@+id/button_quiz"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_row="6"
+        android:layout_column="0"
+        android:layout_gravity="center"
+        android:text="QUIZ" />
+
+    <Button
+        android:id="@+id/button_chart"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_row="8"
+        android:layout_column="0"
+        android:layout_gravity="center"
+        android:text="BMI CHART" />
+
 </GridLayout>
